--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@radix-ui/react-switch": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
+    "motion": "^12.0.0-alpha.2",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
