--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
-    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
-    "@mapbox/search-js-react": "^1.0.0",
-    "@mapbox/search-js-web": "^1.0.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotted-map": "^2.2.3",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
-    "mapbox-gl": "^3.10.0",
     "motion": "^12.0.0-alpha.2",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
@@ -32,7 +30,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
