--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "axios": "^1.8.1",
