Add Predictions component and API for earthquake predictions; update dependencies and .gitignore

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
+    "@google-cloud/bigquery": "^7.9.3",
+    "@google-cloud/storage": "^7.15.2",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -22,10 +24,11 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
     "motion": "^12.0.0-alpha.2",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
